Process Page Template

--- a/2_gallery.html
+++ b/2_gallery.html
@@ -6,9 +6,6 @@
     <link rel="icon" href="Graphics/monogram.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="2_gallery_style.css" type="text/css">
     
-
-    
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@mojs/core"></script> -->
     <!-- Google Fonts 
         Crimson Pro:        400i,700i
         Roboto Condensed:   400
@@ -60,7 +57,7 @@
     <div class="section-div"></div>
 
     <div class="galleryContainer">
-        <div class="gallerySlide" id="top">         <img class="galleryImg" src="/Users/aarongreider/Documents/aarongreider.github.io/Graphics/project1_cover.jpg"></div>
+        <div class="gallerySlide" id="top">         <img class="galleryImg" onclick="openPage('3_project-1.html')" src="/Users/aarongreider/Documents/aarongreider.github.io/Graphics/project1_cover.jpg"></a></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" src="/Users/aarongreider/Documents/aarongreider.github.io/Graphics/project2_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" src="/Users/aarongreider/Documents/aarongreider.github.io/Graphics/project3_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" src="/Users/aarongreider/Documents/aarongreider.github.io/Graphics/project4_cover.jpg"></div>
@@ -70,16 +67,6 @@
         <h2 class="cardTitle">PROJECT 1 IPSUM</h2>
         <p class="cardSupport">Description Ipsum dolor sit amet, consectetuer adipiscing elit, sed diam</p>
         <img class="cardImg" src="/Users/aarongreider/Documents/aarongreider.github.io/Graphics/about1.jpg">
-    </div>
-    <div class="card">
-        <h2 class="cardTitle">PROJECT 1 IPSUM</h2>
-        <p class="cardSupport">Description Ipsum dolor sit amet, consectetuer adipiscing elit, sed diam</p>
-        <img class="cardImg" src="/Users/aarongreider/Documents/aarongreider.github.io/Graphics/placeholderz1.jpg">
-    </div>
-    <div class="card">
-        <h2 class="cardTitle">PROJECT 1 IPSUM</h2>
-        <p class="cardSupport">Description Ipsum dolor sit amet, consectetuer adipiscing elit, sed diam</p>
-        <img class="cardImg" src="/Users/aarongreider/Documents/aarongreider.github.io/Graphics/placeholderz1.jpg">
     </div>
 
 <!--- ARROWS -->
