--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
     <div class="section-div"></div>
 
     <div class="galleryContainer">
-        <div class="gallerySlide" id="top">         <img class="galleryImg" onclick="openPage('3_project-1.html')" src="/Users/aarongreider/Documents/aarongreider.github.io/Graphics/project1_cover.jpg"></a></div>
-        <div class="gallerySlide" id="null">        <img class="galleryImg" src="/Users/aarongreider/Documents/aarongreider.github.io/Graphics/project2_cover.jpg"></div>
-        <div class="gallerySlide" id="null">        <img class="galleryImg" src="/Users/aarongreider/Documents/aarongreider.github.io/Graphics/project3_cover.jpg"></div>
-        <div class="gallerySlide" id="null">        <img class="galleryImg" src="/Users/aarongreider/Documents/aarongreider.github.io/Graphics/project4_cover.jpg"></div>
+        <div class="gallerySlide" id="top">         <img class="galleryImg" onclick="openPage('3_project-1.html')" src="Graphics/project1_cover.jpg"></a></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" src="Graphics/project2_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" src="Graphics/project3_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" src="Graphics/project4_cover.jpg"></div>
     </div>
 
     <div class="card">
         <h2 class="cardTitle">PROJECT 1 IPSUM</h2>
         <p class="cardSupport">Description Ipsum dolor sit amet, consectetuer adipiscing elit, sed diam</p>
-        <img class="cardImg" src="/Users/aarongreider/Documents/aarongreider.github.io/Graphics/about1.jpg">
+        <img class="cardImg" src="Graphics/about1.jpg">
     </div>
 
 <!--- ARROWS -->
