Mid page transition

--- a/3_project-1.html
+++ b/3_project-1.html
@@ -90,8 +90,8 @@
         };
 
         //ScrollReveal().reveal('.card :not(img)', slideUp);
-        ScrollReveal().reveal('.card img', delayedSlideUp);
-        ScrollReveal().reveal('.colorShift', fadeInSimple);
+        // ScrollReveal().reveal('.card img', delayedSlideUp);
+        // ScrollReveal().reveal('.colorShift', fadeInSimple);
     </script>
 </body>
 </html>
