Correct Page Transitions and Parallax Scolling

--- a/index.html
+++ b/index.html
@@ -22,32 +22,32 @@
     <div class="colorShift"></div>
     <div class="textContainer">
         <div class="galleryText">
-            <h4 class="">PROJECT FLAVOR</h4>
-            <h1 class="">Project Title</h1>
+            <h4 class="">ALBUM COVER</h4>
+            <h1 class="">Midnight Snack</h1>
             <h3 class="">/ 1</h3>
             <p class="">Description Ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh Consectetuer adipiscing elit, sed
             diam nonummy nibh euismod tincidunt ut laoreet dolore</p>
         </div>
 
         <div class="galleryText">
-            <h4 class="inactiveFinal">PROJECT FLAVOR</h4>
-                <h1 class="inactiveFinal">Project Title</h1>
+            <h4 class="inactiveFinal">ALBUM COVER</h4>
+                <h1 class="inactiveFinal">Boys Will Be Bugs</h1>
                 <h3 class="inactiveFinal">/ 2</h3>
                 <p class="inactiveFinal">Bacon ipsum dolor amet pancetta buffalo turkey, burgdoggen corned beef bacon turducken pig chicken swine tail ball tip.
                 Short loin landjaeger shankle meatball, tongue venison</p>
         </div>
 
         <div class="galleryText">
-            <h4 class="inactiveFinal">PROJECT FLAVOR</h4>
-                <h1 class="inactiveFinal">Project Title</h1>
+            <h4 class="inactiveFinal">ALBUM COVER</h4>
+                <h1 class="inactiveFinal">Mezzanine</h1>
                 <h3 class="inactiveFinal">/ 3</h3>
                 <p class="inactiveFinal">Ostriches owls. Mooo cat daisys, grunt in turkey coo, windmill at bull. Gate wind, moonshine horses meow irrigation ,
                 with feed troughs cheep, or cabbage with pumpkin trees chicken</p>
         </div>
 
         <div class="galleryText">
-            <h4 class="inactiveFinal">PROJECT FLAVOR</h4>
-                <h1 class="inactiveFinal">Project Title</h1>
+            <h4 class="inactiveFinal">MAGAZINE</h4>
+                <h1 class="inactiveFinal">Alley Fiend</h1>
                 <h3 class="inactiveFinal">/ 4</h3>
                 <p class="inactiveFinal">Toffee tootsie roll cheesecake cake icing sweet chocolate bar. Chocolate cake gingerbread apple pie danish jelly beans
                 topping cake cake cotton candy. Dessert cake muffin. Danish oat cake gingerbread sesame snaps tootsie roll</p>
