Project 2 content and prep for optimization

--- a/3_project-2.html
+++ b/3_project-2.html
@@ -26,8 +26,8 @@
     </div>
     
    
-    <h4 class="fadeMe">MASSIVE ATTACK</h4>
-    <h1 class="fadeMe">Mezzanine</h1>
+    <h4 class="fadeMe">CAVETOWN</h4>
+    <h1 class="fadeMe">Boys Will Be Bugs</h1>
 
     <div class="contentScroll fadeMe"></div>
 
@@ -35,79 +35,75 @@
     <div class="flexContainer">
         <div class="card">
             <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Mezzanine/mezzanine_gif2.gif">
+                <img class="cardImg" style="object-fit: contain;" src="Graphics/Boys/BOYS_process-9.jpg">
             </div>
-            <img class="cardImg" src="Graphics/Mezzanine/mezzanine_gif1.gif">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-15.jpg">
         </div>
         <div class="card">
             <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Mezzanine/MEZZ_process-1.jpg">
+                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Boys/BOYS_process-7.jpg">
             </div>
-            <img class="cardImg" src="Graphics/Mezzanine/MEZZ_process-16.jpg">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-8.jpg">
         </div>
         <div class="card">
             <div class="flexText">
-                <h2 style="object-fit: contain; width: 10em;" class="cardTitle">Meanwhile at your abandonded local pool... </h2>
+                <h2 style="object-fit: contain; width: 9em;" class="cardTitle">You guessed it, these bugs are not all boys. 
+                                                                                Come on, it's 2020.</h2>
                 <p class="cardSupport">
                 </p>
             </div>
-            <img class="cardImg" src="Graphics/Mezzanine/MEZZ_process-8.jpg">
+            <img class="cardImg" src="Graphics/Boys/BOYS_process-13.jpg">
         </div>
+        <p class="mosquito">&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#60--------- <br>*mosquito*</p>
         <div class="card">
             <div class="flexText">
             </div>
-            <img class="cardImg" style="object-fit: contain; order:2!important;" src="Graphics//Mezzanine/MEZZ_process-7.jpg">
+            <img class="cardImg" style="object-fit: contain; order:2!important;" src="Graphics//Boys/BOYS_process-3.jpg">
         </div>
         <div class="card">
             <div class="flexText">
-                <p class="cardSupport">There's probably something surreal, supernatural, and lowkey trippy.
-                    <br><br>But I wouldn't really know because I wasn't there.
+                <p class="cardSupport"> Singer/songwriter Cavetown carved a musical niche with intimate bedroom ukulele indie-pop.
+                                        Naive and childish at times, but always wholesome and honest with playful metaphors and motifs
+                                        across his whole discography. 
                 </p>
             </div>
+            <img class="cardImg" src="Graphics//Boys/BOYS_process-10.jpg">
         </div>
         <div class="card">
             <div class="flexText">
-                <p class="cardSupport"> Pictured is the Brookview Pool, a childhood favorite, two years abandoned. <br><br>The perfect 
-                                        surrealistic and decrepit location to visually embody the trip hop ground-zero, Mezzanine.
-                </p>
+                <img class="cardImg" style="object-fit: contain;" src="Graphics//Boys/BOYS_process-2.jpg">
             </div>
-            <img class="cardImg" src="Graphics//Mezzanine/MEZZ_process-17.jpg">
+            <img class="cardImg" src="Graphics//Boys/BOYS_process-11.jpg">
         </div>
         <div class="card">
             <div class="flexText">
-                <img class="cardImg" style="object-fit: contain;" src="Graphics//Mezzanine/MEZZ_process-2.jpg">
-            </div>
-            <img class="cardImg" src="Graphics//Mezzanine/MEZZ_process-18.jpg">
-        </div>
-        <div class="card">
-            <div class="flexText">
-                <p class="cardSupport">I wanted to stretch the definition of a mezzanine, and the abandoned pool served as location where you were on the mezzanine level, 
-                                        but still felt like someone unseen was watching.
+                <p class="cardSupport">Childhood is fleeting, and the moments where kids 
+                                        are shamelessly themselves even moreso.
                 </p>
             </div>
             <img class="cardImg" style="object-fit: contain; order:0!important;"
-                src="Graphics//Mezzanine/MEZZ_process-19.jpg">
+                src="Graphics//Boys/BOYS_process-14.jpg">
         </div>
         <div class="card">
-            <img class="cardImg" style="object-fit: contain; order:0!important;" src="Graphics//Mezzanine/MEZZ_process-11.jpg">
+            <img class="cardImg" style="object-fit: contain; order:0!important;" src="Graphics//Boys/BOYS_process-4.jpg">
             <div class="flexText">
-                <p class="cardSupport">I found this cool little clear vinyl record from a Dark Side of the Moon gate fold, which I thought would make an
-                                        exquisite complement to my metallic cover. 
+                <p class="cardSupport">To me, capturing this sunset setting was precious as it was lucky, I'm thankful for
+                                        the opportunity to show my bugs off to the world.
                 </p>
             </div>
         </div>
         <div class="card">
             <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics//Mezzanine/MEZZ_process-10.jpg">
             </div>
-            <img class="cardImg" src="Graphics//Mezzanine/MEZZ_process-20.jpg">
+            <img class="cardImg" style="object-fit: contain; order:2!important;" src="Graphics//Boys/BOYS_process-16.jpg">
         </div>
         <div class="card">
             <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics//Mezzanine/MEZZ_process-9.jpg">
+                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics//Boys/BOYS_process-17.jpg">
             </div>
-            <img class="cardImg" src="Graphics//Mezzanine/MEZZ_process-12.jpg">
+
         </div>
+   
 
         <div class="section-2">
             <div style="position: relative !important; left: 0; top: -15vh;" class="galleryNav">
