--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="section-div"></div>
 
     <div class="galleryContainer">
-        <div class="gallerySlide" id="top">         <img class="galleryImg" onclick="openPage('3_project-1.html')" src="Graphics/project1_cover.jpg"></a></div>
-        <div class="gallerySlide" id="null">        <img class="galleryImg" src="Graphics/project2_cover.jpg"></div>
+        <div class="gallerySlide" id="top">         <img class="galleryImg" onclick="openPage('3_project-1.html')" src="Graphics/project1_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-2.html')" src="Graphics/project2_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-3.html')" src="Graphics/project3_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" src="Graphics/project4_cover.jpg"></div>
     </div>
