Fiend and Wawa process pages

--- a/3_project-4.html
+++ b/3_project-4.html
@@ -26,8 +26,8 @@
     </div>
     
    
-    <h4 class="fadeMe">MASSIVE ATTACK</h4>
-    <h1 class="fadeMe">Mezzanine</h1>
+    <h4 class="fadeMe"></h4>
+    <h1 class="fadeMe">Alley Fiend</h1>
 
     <div class="contentScroll fadeMe"></div>
 
@@ -35,79 +35,101 @@
     <div class="flexContainer">
         <div class="card">
             <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Mezzanine/mezzanine_gif2.gif">
+                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Fiend/fiend_gif10-cover.gif">
             </div>
-            <img class="cardImg" src="Graphics/Mezzanine/mezzanine_gif1.gif">
+            <img class="cardImg" style="box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);" src="Graphics/Fiend/Fiend_gif1.gif">
         </div>
         <div class="card">
             <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Mezzanine/MEZZ_process-1.jpg">
+                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Fiend/fiend_gif2.gif">
             </div>
-            <img class="cardImg" src="Graphics/Mezzanine/MEZZ_process-16.jpg">
+            <img class="cardImg" style="box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);" src="Graphics/Fiend/fiend_gif3.gif">
         </div>
         <div class="card">
             <div class="flexText">
-                <h2 style="object-fit: contain; width: 10em;" class="cardTitle">Meanwhile at your abandonded local pool... </h2>
-                <p class="cardSupport">
+                <h2 style="object-fit: contain; width: 10em;" class="cardTitle">Indentity, Editorial Typography </h2>
+                <p class="cardSupport"> <br>Though I guess this style can hardly be evalutated as "editorial." 
+                                        Maybe anti-editorial would be more accurate.
                 </p>
             </div>
-            <img class="cardImg" src="Graphics/Mezzanine/MEZZ_process-8.jpg">
+            <img class="cardImg" src="Graphics/Fiend/fiend_process-14.jpg">
         </div>
         <div class="card">
             <div class="flexText">
+                <p class="cardSupport"> Beginning with a category and a statement of intent, to a logo, then to the spread design,
+                                        this acedemic project became very dense. <br><br> To consolodate, most of my iterations are contained in gifs.
+                                        <br><br><br><br>
+                </p>
             </div>
-            <img class="cardImg" style="object-fit: contain; order:2!important;" src="Graphics//Mezzanine/MEZZ_process-7.jpg">
-        </div>
-        <div class="card">
             <div class="flexText">
-                <p class="cardSupport">There's probably something surreal, supernatural, and lowkey trippy.
-                    <br><br>But I wouldn't really know because I wasn't there.
+                <p class="cardSupport"> If you're interested in the initial sketches, or an in-depth statement of my philosphy and voice behind the
+                                        final and runner-up concepts, pull up <a href="Graphics/Fiend/greider_aaron-class process.pdf" target="_blank">this process document here.</a>
+                                        <br><br> Scroll on for pretty pictures.
                 </p>
             </div>
         </div>
         <div class="card">
             <div class="flexText">
-                <p class="cardSupport"> Pictured is the Brookview Pool, a childhood favorite, two years abandoned. <br><br>The perfect 
-                                        surrealistic and decrepit location to visually embody the trip hop ground-zero, Mezzanine.
+                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Fiend/fiend_process-16.jpg">
+            </div>
+            <img class="cardImg" style="box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);" src="Graphics/Fiend/fiend_gif4-contents.gif">
+        </div>
+        <div class="card">
+            <div class="flexText">
+                <p class="cardSupport">The ultimate sentiment of the publication is: we do what we want, we do crack, we do anarchy. Alternatively: we came, we
+                saw, we anarchy. <br><br>And also we steal articles from The Onion. But this is an acedemic project so that's okay.
+                <br><br><br><br><br><br><br><br>
                 </p>
             </div>
-            <img class="cardImg" src="Graphics//Mezzanine/MEZZ_process-17.jpg">
-        </div>
-        <div class="card">
             <div class="flexText">
-                <img class="cardImg" style="object-fit: contain;" src="Graphics//Mezzanine/MEZZ_process-2.jpg">
+                <p class="cardSupport" style="width: 18em;"> Contained in this article: An editor's note by Ernest Hemmingway, An overview of the <i>Tennets of Anarchism</i> by Stephen King,
+                                        a brief analysis of <i>Rumpelstilkskin</i> by the esteemed William Shakespeare, an interview with your mom by F. Scott Fitzgerald, 
+                                        and concluding with a groundbreaking study on the positive effects of sniffing glue in adolescents.
+                </p>
             </div>
-            <img class="cardImg" src="Graphics//Mezzanine/MEZZ_process-18.jpg">
         </div>
         <div class="card">
             <div class="flexText">
-                <p class="cardSupport">I wanted to stretch the definition of a mezzanine, and the abandoned pool served as location where you were on the mezzanine level, 
-                                        but still felt like someone unseen was watching.
+                <p class="cardSupport">I visualized my anarcho-punk muse with dense textures formed with a typographical tribute to my home boy David Carson,
+                and smearing actual dirt all over everything.
+                <br><br><i>(pictured: an early wordmark exploration)</i>
+                <br><br><br><br>
                 </p>
             </div>
             <img class="cardImg" style="object-fit: contain; order:0!important;"
-                src="Graphics//Mezzanine/MEZZ_process-19.jpg">
-        </div>
-        <div class="card">
-            <img class="cardImg" style="object-fit: contain; order:0!important;" src="Graphics//Mezzanine/MEZZ_process-11.jpg">
-            <div class="flexText">
-                <p class="cardSupport">I found this cool little clear vinyl record from a Dark Side of the Moon gate fold, which I thought would make an
-                                        exquisite complement to my metallic cover. 
-                </p>
-            </div>
+                src="Graphics//Fiend/fiend_process-15.jpg">
         </div>
         <div class="card">
             <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics//Mezzanine/MEZZ_process-10.jpg">
+                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Fiend/fiend_gif5-crack.gif">
             </div>
-            <img class="cardImg" src="Graphics//Mezzanine/MEZZ_process-20.jpg">
+            <img class="cardImg" src="Graphics/Fiend/fiend_gif6-mom.gif">
         </div>
         <div class="card">
             <div class="flexText">
-                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics//Mezzanine/MEZZ_process-9.jpg">
+                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Fiend/fiend_gif7-glue.gif">
             </div>
-            <img class="cardImg" src="Graphics//Mezzanine/MEZZ_process-12.jpg">
+            <img class="cardImg" src="Graphics/Fiend/fiend_gif8-tenets.gif">
         </div>
+        <div class="card">
+            <div class="flexText">
+                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Fiend/fiend_gif9-rump.gif">
+            </div>
+            <img class="cardImg" src="Graphics/Fiend/fiend_gif9-rump.gif">
+        </div>
+        <div class="card">
+            <div class="flexText">
+                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Fiend/fiend_process-12.jpg">
+            </div>
+            <img class="cardImg" src="Graphics/Fiend/fiend_process-11.jpg">
+        </div>
+        <div class="card">
+            <div class="flexText">
+                <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Fiend/fiend_process-14.jpg">
+            </div>
+            <img class="cardImg" src="Graphics/Fiend/fiend_process-13.jpg">
+        </div>
+
 
         <div class="section-2">
             <div style="position: relative !important; left: 0; top: -15vh;" class="galleryNav">
