Added Wawa and BWW pages, updated margins

--- a/3_project-4.html
+++ b/3_project-4.html
@@ -62,7 +62,7 @@
                 </p>
             </div>
             <div class="flexText">
-                <p class="cardSupport"> If you're interested in the initial sketches, or an in-depth statement of my philosphy and voice behind the
+                <p class="cardSupport"> If you're interested in the initial sketches, or an in-depth statement of my philosophy and voice behind the
                                         final and runner-up concepts, pull up <a href="Graphics/Fiend/greider_aaron-class process.pdf" target="_blank">this process document here.</a>
                                         <br><br> Scroll on for pretty pictures.
                 </p>
