--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-2.html')" src="Graphics/project2_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-3.html')" src="Graphics/project3_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-4.html')" src="Graphics/project4_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-5.html')" src="Graphics/project5_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-6.html')" src="Graphics/project6_cover.jpg"></div>
     </div>
 
     <div class="textContainer">
@@ -59,6 +61,23 @@
                 <h3 class="inactiveFinal">/ 4</h3>
                 <p class="inactiveFinal">Alley Fiend is a lifestyle publication that celebrates anarcho-punk culture and a 
                                         near pointless glorification of gratuitous self-indulgence.
+                </p>
+            </div>
+
+            <div class="galleryText">
+                <h4 class="inactiveFinal">MURAL</h4>
+                <h1 class="inactiveFinal">Wawa, Gainseville</h1>
+                <h3 class="inactiveFinal">/ 5</h3>
+                <p class="inactiveFinal">The Wawa Convenience Store in Gainseville Florida is a block away from the 
+                                        University of Florida campus. Naturally, they requested a mural that depicted iconic UF locations.
+                </p>
+            </div>
+            <div class="galleryText">
+                <h4 class="inactiveFinal">GIFT CARDS</h4>
+                <h1 class="inactiveFinal">Buffalo Wild Wings</h1>
+                <h3 class="inactiveFinal">/ 6</h3>
+                <p class="inactiveFinal">After having done a full rebrand of B-Dubs, Inspire Brands hit us with a fresh task: create a bunch
+                                         of different gift card concepts that <s>are better than Starbucks</s> have unique carriers and designs.
                 </p>
             </div>
     </div>
