Champ page added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-4.html')" src="Graphics/project4_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-5.html')" src="Graphics/project5_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-6.html')" src="Graphics/project6_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-7.html')" src="Graphics/project7_cover.jpg"></div>
     </div>
 
     <div class="textContainer">
@@ -78,6 +79,14 @@
                 <h3 class="inactiveFinal">/ 6</h3>
                 <p class="inactiveFinal">After having done a full rebrand of B-Dubs, Inspire Brands hit us with a fresh task: create a bunch
                                          of different gift card concepts that <s>are better than Starbucks</s> have unique carriers and designs.
+                </p>
+            </div>
+            <div class="galleryText"> 
+                <h4 class="inactiveFinal">EVENT</h4>
+                <h1 class="inactiveFinal">World Championship</h1>
+                <h3 class="inactiveFinal">/ 7</h3>
+                <p class="inactiveFinal">
+                    An acedemic project about a fictional World Championship, who's branding centers around an in-depth icon set. 
                 </p>
             </div>
     </div>
