User Interface cues lol

--- a/3_project-3.html
+++ b/3_project-3.html
@@ -60,8 +60,7 @@
         </div>
         <div class="card">
             <div class="flexText">
-                <p class="cardSupport">There's probably something surreal, supernatural, and lowkey trippy.
-                    <br><br>But I wouldn't really know because I wasn't there.
+                <p class="cardSupport">There's probably something surreal, supernatural, and maybe a little trippy.
                 </p>
             </div>
         </div>
@@ -116,7 +115,7 @@
                     <rect />
                 </svg>
             </div>
-            <h4 class="fadeMe">THIS ENTIRE WEBSITE WAS HAND CODED BY YOURS TRULY.</h4>
+            <h4 class="fadeMe">IF YOU HAVEN'T HEARD, I MADE THIS WEBSITE.</h4>
             <div class="mediaLinks">
                 <div>
                     <p class="fadeMe">resume</p>
