--- a/3_project-5.html
+++ b/3_project-5.html
@@ -119,7 +119,7 @@
                     <rect />
                 </svg>
             </div>
-            <h4 class="fadeMe">THIS ENTIRE WEBSITE WAS HAND CODED BY YOURS TRULY.</h4>
+            <h4 class="fadeMe">A DESIGN PRODIGY NAMED AARON CODED THIS ENTIRE WEBSITE.</h4>
             <div class="mediaLinks">
                 <div>
                     <p class="fadeMe">resume</p>
