--- a/3_project-7.html
+++ b/3_project-7.html
@@ -37,7 +37,8 @@
             <img class="cardImg" style="object-fit: cover; height: 30em;" src="Graphics/Champ/Champ_gif1.gif">
             <div class="flexText">
                 <p class="cardSupport" style="width: 14em;"><br><br><br><br>
-                    To show what the acedemic world is like today, this project will be layed out a little differently.
+                    To show what the acedemic world is like today, this project will be layed out a little differently. 
+                    <br><br>My final images and process are shown in the links below
                     <br><br><br><br>A final submission containing event branding: <a href="Graphics/Champ/greider_final applications.pdf" target="_blank">PDF here.</a>
                     <br><br>A process submission containing the logic behind my icon set: <a href="Graphics/Champ/greider_final grid and logic.pdf" target="_blank">PDF here.</a>
                 </p>
@@ -52,7 +53,7 @@
                     <rect />
                 </svg>
             </div>
-            <h4 class="fadeMe">THIS ENTIRE WEBSITE WAS HAND CODED BY YOURS TRULY.</h4>
+            <h4 class="fadeMe">DID I MENTIONAL THAT THIS ENTIRE WEBSITE WAS HAND CODED.</h4>
             <div class="mediaLinks">
                 <div>
                     <p class="fadeMe">resume</p>
