--- a/index.html
+++ b/index.html
@@ -94,7 +94,15 @@
 
     <!--- ARROWS -->
     <!--- ARROWS -->
+    <h3 id="about">ABOUT &#8595;</h3>
+
     <div class="btn--flex">
+        <div class="btnExpandProj">
+            <h3 style="cursor: pointer;" onclick="openPageBtn()">OPEN PROJECT</h3>
+            <svg style="cursor: pointer;" onclick="openPageBtn()">
+                <rect />
+            </svg>
+        </div>
         <div class="circle-btn--container left">
             <div class="circle-btn--outer">
                 <div class="circle-arrow--icon">
@@ -147,9 +155,9 @@
         <div class="section-2">
             <h4>THIS ENTIRE WEBSITE WAS HAND CODED BY YOURS TRULY.</h4>
             <div class="mediaLinks">
-                <div><p>resume</p></div>
+                <a href="DOWNLOADS/aaron_greider_resume_S20.pdf" target="_blank"><div><p>resume</p></div></a>
                 <div><p>@me</p></div>
-                <div><p>github repo</p></div>
+                <a href="https://github.com/aarongreider" target="_blank"><div><p>github repo</p></div></a>
             </div>
         </div>
 
