rearrange gallery, revise content

--- a/3_project-1.html
+++ b/3_project-1.html
@@ -35,9 +35,9 @@
     <div class="flexContainer">
         <div class="card">
             <div class="flexText">
-                <img class="cardImg" style="object-fit: contain;" src="Graphics/midnight_gif2.gif">
+                <img class="cardImg" style="object-fit: contain;" src="Graphics/MidnightSnack/midnight_gif2.gif">
             </div>
-            <img class="cardImg" src="Graphics/midnight_gif1.gif">
+            <img class="cardImg" src="Graphics/MidnightSnack/midnight_gif1.gif">
         </div>
         <div class="card">
             <div class="flexText">
