--- a/3_project-3.html
+++ b/3_project-3.html
@@ -35,6 +35,18 @@
     <div class="flexContainer">
         <div class="card">
             <div class="flexText">
+                <p class="cardSupport">God is looking down on everything we do as if he were above in the mezzanine, standing
+                    idle as we fall to the rules of
+                    his realm, as if he were too pretentious to help.<br><br>
+        
+                    The more perverse your angle, the more imperfect it becomes; teasing and taunting us with strict rules.
+                    <br><br>
+                    We are insignificant.
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="flexText">
                 <img class="cardImg" style="object-fit: contain; width: 24em;" src="Graphics/Mezzanine/mezzanine_gif2.gif">
             </div>
             <img class="cardImg" src="Graphics/Mezzanine/mezzanine_gif1.gif">
@@ -47,7 +59,7 @@
         </div>
         <div class="card">
             <div class="flexText">
-                <h2 style="object-fit: contain; width: 10em;" class="cardTitle">Meanwhile at your abandonded local pool... </h2>
+                <h2 style="object-fit: contain; width: 10em;" class="cardTitle">Meanwhile at the abandonded local pool... </h2>
                 <p class="cardSupport">
                 </p>
             </div>
