--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="section-div"></div>
 
     <div class="galleryContainer">
-        <div class="gallerySlide" id="top">         <img class="galleryImg" onclick="openPage('3_project-1.html')" src="Graphics/project1_cover.jpg"></div>
+        <div class="gallerySlide" id="top">         <img class="galleryImg" onclick="openPage('3_project-1.html')" src="Graphics/project1_cover2.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-2.html')" src="Graphics/project2_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-3.html')" src="Graphics/project3_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-4.html')" src="Graphics/project4_cover.jpg"></div>
@@ -94,7 +94,7 @@
 
     <!--- ARROWS -->
     <!--- ARROWS -->
-    <h3 id="about">ABOUT &#8595;</h3>
+    <h4 id="about">ABOUT &#8595;</h4>
 
     <div class="btn--flex">
         <div class="btnExpandProj">
