UI revisions, next project button

--- a/3_project-3.html
+++ b/3_project-3.html
@@ -121,9 +121,9 @@
         </div>
 
         <div class="section-2">
-            <div style="position: relative !important; left: 0; top: -15vh;" class="galleryNav">
-                <h3 style="cursor: pointer;" onclick="openGallery('index.html')">GALLERY</h3>
-                <svg style="cursor: pointer;" onclick="openGallery('index.html')">
+            <div style="position: relative !important; left: 0; top: -15vh;" class="galleryNav fadeMe">
+                <h3 style="cursor: pointer;" onclick="openGallery('0')">NEXT</h3>
+                <svg style="cursor: pointer;" onclick="openGallery('0')">
                     <rect />
                 </svg>
             </div>
