--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="galleryText">
                 <h4 class="">ALBUM COVER</h4>
                 <h1 class="">Midnight Snack</h1>
-                <h3 class="">/ 1</h3>
+                <h3 class="">1 <span class="" style="font-size: .6em;">/ 7</span></h3>
                 <p class="">A man, a ten second camera timer, and an empty refrigerator. I designed a new album cover for Homeshake's Midnight snack
                 featuring myself, as the midnight snack...</p>
             </div>
@@ -43,7 +43,7 @@
             <div class="galleryText">
                 <h4 class="inactiveFinal">ALBUM COVER</h4>
                 <h1 class="inactiveFinal">Boys Will Be Bugs</h1>
-                <h3 class="inactiveFinal">/ 2</h3>
+                <h3 class="inactiveFinal">2 <span class="inactiveFinal" style="font-size: .6em;">/ 7</span></h3>
                 <p class="inactiveFinal">This moment I captured is worth much more than the plastic CD case I placed them in. I captured my little cousins
                 playing in a creek waterfall, displaying the tiny carefree bugs they are.</p>
             </div>
@@ -51,7 +51,7 @@
             <div class="galleryText">
                 <h4 class="inactiveFinal">ALBUM COVER</h4>
                 <h1 class="inactiveFinal">Mezzanine</h1>
-                <h3 class="inactiveFinal">/ 3</h3>
+                <h3 class="inactiveFinal">3 <span class="inactiveFinal" style="font-size: .6em;">/ 7</span></h3>
                 <p class="inactiveFinal">Mezzanine is a trip hop classic, and there was no better location to embody its ambient
                 sound than the local abandoned pool.</p>
             </div>
@@ -59,7 +59,7 @@
             <div class="galleryText">
                 <h4 class="inactiveFinal">MAGAZINE</h4>
                 <h1 class="inactiveFinal">Alley Fiend</h1>
-                <h3 class="inactiveFinal">/ 4</h3>
+                <h3 class="inactiveFinal">4 <span class="inactiveFinal" style="font-size: .6em;">/ 7</span></h3>
                 <p class="inactiveFinal">Alley Fiend is a lifestyle publication that celebrates anarcho-punk culture and a 
                                         near pointless glorification of gratuitous self-indulgence.
                 </p>
@@ -68,7 +68,7 @@
             <div class="galleryText">
                 <h4 class="inactiveFinal">MURAL</h4>
                 <h1 class="inactiveFinal">Wawa, Gainseville</h1>
-                <h3 class="inactiveFinal">/ 5</h3>
+                <h3 class="inactiveFinal">5 <span class="inactiveFinal" style="font-size: .6em;">/ 7</span></h3>
                 <p class="inactiveFinal">The Wawa Convenience Store in Gainseville Florida is a block away from the 
                                         University of Florida campus. Naturally, they requested a mural that depicted iconic UF locations.
                 </p>
@@ -76,7 +76,7 @@
             <div class="galleryText">
                 <h4 class="inactiveFinal">GIFT CARDS</h4>
                 <h1 class="inactiveFinal">Buffalo Wild Wings</h1>
-                <h3 class="inactiveFinal">/ 6</h3>
+                <h3 class="inactiveFinal">6 <span class="inactiveFinal" style="font-size: .6em;">/ 7</span></h3>
                 <p class="inactiveFinal">After having done a full rebrand of B-Dubs, Inspire Brands hit us with a fresh task: create a bunch
                                          of different gift card concepts that <s>are better than Starbucks</s> have unique carriers and designs.
                 </p>
@@ -84,7 +84,7 @@
             <div class="galleryText"> 
                 <h4 class="inactiveFinal">EVENT</h4>
                 <h1 class="inactiveFinal">World Championship</h1>
-                <h3 class="inactiveFinal">/ 7</h3>
+                <h3 class="inactiveFinal">7 <span class="inactiveFinal" style="font-size: .6em;">/ 7</span></h3>
                 <p class="inactiveFinal">
                     An acedemic project about a fictional World Championship, who's branding centers around an in-depth icon set. 
                 </p>
