--- a/3_project-1.html
+++ b/3_project-1.html
@@ -99,10 +99,11 @@
             <img class="cardImg" src="Graphics/MidnightSnack/MS_process-21.jpg">
         </div>
 
+        
         <div class="section-2">
             <div style="position: relative !important; left: 0; top: -15vh;" class="galleryNav fadeMe">
-                <h3 style="cursor: pointer;" onclick="openGallery('index.html')">GALLERY</h3>
-                <svg style="cursor: pointer;" onclick="openGallery('index.html')">
+                <h3 style="cursor: pointer;" onclick="openGallery('0')">NEXT</h3>
+                <svg style="cursor: pointer;" onclick="openGallery('0')">
                     <rect />
                 </svg>
             </div>
